Fix icon clipping

--- a/app/styles/blocks/_videopromo.scss
+++ b/app/styles/blocks/_videopromo.scss
@@ -20,7 +20,7 @@
   position: absolute;
   top: 50%;
   transform: translate(-50%, -50%);
-  width: 40%;
+  width: 50%;
 
   .videopromo-container:hover & {
     opacity: .65;
